# timothy

./: .gitignore  CMakeLists.txt  Makefile  Readme.md
cmake/: FindHYPRE.cmake  FindSPRNG.cmake  FindZoltan.cmake
doc/html/: annotated.html  annotated.js  bone_8c.html  bone_8c.js  bone_8c__incl.map  bone_8c__incl.md5  bone_8c_a76de0ed6535f866cc17a6eb1b7cf1350_icgraph.map  bone_8c_a76de0ed6535f866cc17a6eb1b7cf1350_icgraph.md5  bone_8c_source.html  cells_8c.html  cells_8c.js  cells_8c__incl.map  cells_8c__incl.md5  cells_8c_a00dbe1f9f23fc7385462c32b89d28cf8_icgraph.map  cells_8c_a00dbe1f9f23fc7385462c32b89d28cf8_icgraph.md5  cells_8c_a2d9450bd2eebb8f4d645417b92666b87_icgraph.map  cells_8c_a2d9450bd2eebb8f4d645417b92666b87_icgraph.md5  cells_8c_a718a88fce87f8ebdb87ed2fafed4c5c4_icgraph.map  cells_8c_a718a88fce87f8ebdb87ed2fafed4c5c4_icgraph.md5  cells_8c_a8101c456dae07ab9cbd918ccad3a2ff7_icgraph.map  cells_8c_a8101c456dae07ab9cbd918ccad3a2ff7_icgraph.md5  cells_8c_aa2ee543811c23ee4b487102bb71ba9c7_icgraph.map  cells_8c_aa2ee543811c23ee4b487102bb71ba9c7_icgraph.md5  cells_8c_aeb1f066ef0713a8a50eb1e58784a3d7b_icgraph.map  cells_8c_aeb1f066ef0713a8a50eb1e58784a3d7b_icgraph.md5  cells_8c_aeeb6dee9938af6fef987f1c949458703_icgraph.map  cells_8c_aeeb6dee9938af6fef987f1c949458703_icgraph.md5  cells_8c_source.html  chemf_8c.html  chemf_8c_a1f8f7d186d46aafcd792aaf3bee655a7_cgraph.map  chemf_8c_a1f8f7d186d46aafcd792aaf3bee655a7_cgraph.md5  chemf_8c_a1f8f7d186d46aafcd792aaf3bee655a7_icgraph.map  chemf_8c_a1f8f7d186d46aafcd792aaf3bee655a7_icgraph.md5  chemf_8c_a5ca738b55b36899ceaa4fe1e6ff38b9f_icgraph.map  chemf_8c_a5ca738b55b36899ceaa4fe1e6ff38b9f_icgraph.md5  chemf_8c_ae67d4d36ecee14805a0b6b0b134b0800_cgraph.map  chemf_8c_ae67d4d36ecee14805a0b6b0b134b0800_cgraph.md5  chemf_8c_afb692f34ea05262db93f9bf9590b06a7_icgraph.map  chemf_8c_afb692f34ea05262db93f9bf9590b06a7_icgraph.md5  chemf_8c_source.html  (+275 more)
doc/latex/: annotated.tex  bone_8c.tex  bone_8c__incl.md5  bone_8c_a76de0ed6535f866cc17a6eb1b7cf1350_icgraph.md5  cells_8c.tex  cells_8c__incl.md5  cells_8c_a00dbe1f9f23fc7385462c32b89d28cf8_icgraph.md5  cells_8c_a2d9450bd2eebb8f4d645417b92666b87_icgraph.md5  cells_8c_a718a88fce87f8ebdb87ed2fafed4c5c4_icgraph.md5  cells_8c_a8101c456dae07ab9cbd918ccad3a2ff7_icgraph.md5  cells_8c_aa2ee543811c23ee4b487102bb71ba9c7_icgraph.md5  cells_8c_aeb1f066ef0713a8a50eb1e58784a3d7b_icgraph.md5  cells_8c_aeeb6dee9938af6fef987f1c949458703_icgraph.md5  chemf_8c.tex  chemf_8c_a1f8f7d186d46aafcd792aaf3bee655a7_cgraph.md5  chemf_8c_a1f8f7d186d46aafcd792aaf3bee655a7_icgraph.md5  chemf_8c_a5ca738b55b36899ceaa4fe1e6ff38b9f_icgraph.md5  chemf_8c_ae67d4d36ecee14805a0b6b0b134b0800_cgraph.md5  chemf_8c_afb692f34ea05262db93f9bf9590b06a7_icgraph.md5  comm_8c.tex  comm_8c_a206e073b7e35f281184b3487b3bbc055_icgraph.md5  comm_8c_aa92fc6732720bc9accbbdef7fb02384f_icgraph.md5  comm_8c_ac5b7dbd1157ef088c4e6f8a9f08fcc4b_icgraph.md5  comm_8c_afebf59220f4170178e5fb828d569aaab_icgraph.md5  compute_8c.tex  compute_8c__incl.md5  domdec_8c.tex  fields_8c.tex  (+95 more)
run/: parameters.ini  parameters.ini.dist  parameters.txt  parameters.txt.dist
src/: .domdec.c.kate-swp  Doxyfile  Makefile  bone.c  bone.h  cells.c  cells.h  chemf.c  chemf.h  comm.c  comm.h  compute.c  compute.h  dicts.h  domdec.c  domdec.h  endian.h  fake_io.c  fields.c  fields.h  functions.cpp  functions.h  global.h  grid.c  grid.h  init.c  init.h  inline.h  interp.c  interp.h  io.c  io.h  local_endian.h  main.c  octree.c  octree.h  potential.c  potential.h  random.c  random.h  (+12 more)
ug/: timothy_ug.tex
vis/: povray.sh
(+94 files in other folders)
